k8s/inventory-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inventory-service
spec:
  selector:
    app: inventory
  ports:
    - name: port-main
      protocol: TCP
      port: 8082
      targetPort: 8082
    - name: port-grpc
      protocol: TCP
      port: 9090
      targetPort: 9090
