k8s/k8s-eureka-prod.yml
apiVersion: v1
kind: Service
metadata:
  name: eureka-np
  labels:
    app: eureka
spec:
  type: NodePort
  ports:
  - port: 8761
    nodePort: 30030
    name: eureka
  selector:
    app: eureka
---
apiVersion: v1
kind: Service
metadata:
  name: eureka
  labels:
    app: eureka
spec:
  clusterIP: None
  ports:
  - port: 8761
    name: eureka
  selector:
    app: eureka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: eureka
spec:
  serviceName: 'eureka'
  replicas: 1
  selector:
    matchLabels:
      app: eureka
  template:
    metadata:
      labels:
        app: eureka
    spec:
      containers:
      - name: eureka
        image: omon4412/eureka_image:latest
        ports:
        - containerPort: 8761
        livenessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /
            port: 8761
          initialDelaySeconds: 30
          periodSeconds: 10
          timeoutSeconds: 5
