k8s/kaf-st.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafkasv
spec:
  serviceName: kafkasv
  replicas: 1
  selector:
    matchLabels:
      app: kafkasv
  template:
    metadata:
      labels:
        app: kafkasv
    spec:
      containers:
        - name: kafkasv
          image: confluentinc/cp-kafka:latest
          ports:
            - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafkasv
spec:
  selector:
    app: kafkasv
  ports:
    - name: plain
      protocol: TCP
      port: 9092
    - name: host
      protocol: TCP
      port: 9093
