k8s/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notification-service
spec:
  selector:
    app.kubernetes.io/name: notification
  ports:
    - protocol: TCP
      port: 8084
      targetPort: 8084
