k8s/order-config.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  labels:
    app: order
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      containers:
        - name: order
          image: omon4412/order_image:latest
          ports:
            - containerPort: 8083
            - containerPort: 9091
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
spec:
  selector:
    app: order
  ports:
    - name: port-main
      protocol: TCP
      port: 8083
      targetPort: 8083
    - name: port-grpc
      protocol: TCP
      port: 9091
      targetPort: 9091
