k8s/product-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
spec:
  selector:
    app.kubernetes.io/name: product
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
